--- a/posts/first-post.mdx
+++ b/posts/first-post.mdx
@@ -8,7 +8,7 @@ First, you might be wondering why I used such a weird domain: `mayu.gay`. Well, 
 
 Anyway, I used Next.js to make this website. I think it's a very awesome framework and I will use it again in my future projects. Since it's a small website with a limited number of pages, they're all statically generated and work without JavaScript!
 
-The only caveat is that the theme switcher won't work, but I think the default [Catppucchin](https://github.com/catppuccin/catppuccin) theme is awesome enough.
+The only caveat is that the theme switcher won't work, but I think the default [Catppuccin](https://github.com/catppuccin/catppuccin) theme is awesome enough.
 
 I'm quite proud of how this website turned out, even if it's not flashy as other portfolio websites. I wanted to keep it simple, but also somewhat fancy, and I think I managed to do just that.
 
