feat(post): add tags display

--- a/posts/first-post.mdx
+++ b/posts/first-post.mdx
@@ -2,6 +2,7 @@
 title: "Hello World!"
 summary: "This site has been up for a while now, but it hasn't occured to me until today to actually write a proper blog post."
 date: "2022-04-19T17:53:20.757Z"
+tags: [meta]
 ---
 
 First, you might be wondering why I used such a weird domain: `mayu.gay`. Well, it's only because they were giving out .gay domain names for free. I was really surprised to see no one took `mayu.gay` before me. And... honestly, it's not like I hate this domain. I might even consider renewing it next year (although $30 is quite expensive :/)
