--- a/posts/tiling-wayland.mdx
+++ b/posts/tiling-wayland.mdx
@@ -2,6 +2,7 @@
 title: "My experience with a tiling WM and Wayland"
 summary: "Well, a tiling compositor."
 date: "2022-04-23T18:59:30.001Z"
+tags: [linux, wayland]
 ---
 
 About three months ago I made a decision to switch back to Linux. As for the distro, the obvious choice was Arch. Some people may hate it, say it's unstable... but honestly, I've always been satisfied with it.
